--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,20 @@ body{
     margin : 0;
     padding: 0;
 }
+#cabecera {
+    background:#33a;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color : white;
+    font-weight: bold;
+    margin: 0;
+    padding: .5rem;
+}
+#tagline {
+    margin: 0 0 0 1rem;
+    font-weight: normal;
+    font-size: .8rem;
+}
+
 #container{
     width: 70%;
     padding: 1em;
