--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif, Helvetica, sans-serif;
-    color:dimgray;
+    color:blue;
     font-size: 16px;
     margin : 0;
     padding: 0;
